added more pages

--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -36,36 +36,59 @@
                                         <ul class="uk-nav uk-navbar-dropdown-nav">
                                             <li class="uk-nav-header">Real Estate Websites</li>
                                             <li class="uk-nav-divider"></li>
-                                            <li><a href="#">Agent websites</a></li>
-                                            <li><a href="#">Broker websites</a></li>
-                                            <li><a href="#">Single landing page</a></li>
+                                            <li><a href="/real-estate-agent-websites">Agent websites</a></li>
+                                            <li><a href="/real-estate-broker-websites">Broker websites</a></li>
+                                            <li><a href="/single-property-page">Single Property page</a></li>
                                             <li class="uk-nav-header">IDX Websites</li>
                                             <li class="uk-nav-divider"></li>
-                                            <li><a href="#">Agent IDX</a></li>
-                                            <li><a href="#">Broker IDX</a></li>
+                                            <li><a href="/agent-idx-websites">Agent IDX</a></li>
+                                            <li><a href="/broker-idx-websites">Broker IDX</a></li>
                                         </ul>
                                     </div>
                                     <div>
                                         <ul class="uk-nav uk-navbar-dropdown-nav">
                                             <li class="uk-nav-header">Small Business Websites</li>
                                             <li class="uk-nav-divider"></li>
-                                            <li><a href="#">Basic Websites</a></li>
-                                            <li><a href="#">Ecommerce websites</a></li>
+                                            <li><a href="/basic-website-design">Basic Website</a></li>
+                                            <li><a href="/custom-website-design">Custom Website</a></li>
+                                            <li><a href="/ecommerce-website-design">Ecommerce website</a></li>
                                             <li class="uk-nav-header">Added Website Tools</li>
-                                            <li><a href="#">Web Analytics</a></li>
-                                            <li><a href="#">Google console</a></li>
+                                            <li class="uk-nav-divider"></li>
+                                            <li><a href="/google-analytics">Web Analytics</a></li>
+                                            <li><a href="/google-console">Google console</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/about">About</a></li>
+                        <li>
+                            <a href="#">Resources<span class="uk-icon uk-margin-small-left" uk-icon="icon: chevron-down"></span></a>
+                            <div class="uk-navbar-dropdown uk-navbar-dropdown-width-3">
+                                <div class="uk-navbar-dropdown-grid uk-child-width-1-2" uk-grid>
+                                    <div>
+                                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                                            <li class="uk-nav-header">Hungry Ram</li>
+                                            <li class="uk-nav-divider"></li>
+                                            <li><a href="/about">About</a></li>
+                                            <li><a href="/contact">Contact</a></li>
+                                            <li><a href="/blog">Blog</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                                            <li class="uk-nav-header">Resources</li>
+                                            <li class="uk-nav-divider"></li>
+                                            <li><a href="/faq">FAQ</a></li>
+                                            <li><a href="/portfolio">Portfolio</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
                         <li><a href="/services">Services</a></li>
-                        <li><a href="/portfolio">Portfolio</a></li>
-                        <li><a href="/blog">Blog</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <div class="uk-navbar-item">
-                                <a class="uk-button uk-button-primary" href="">Button</a>
+                                <a class="uk-button uk-button-primary" href="/contact">Free Site Audit</a>
                         </div>                    
                     </ul>
                 </div>
