--- a/layouts/partials/home/image-banner.html
+++ b/layouts/partials/home/image-banner.html
@@ -3,14 +3,11 @@
     <div>
         <div class="uk-background-cover uk-height-large uk-flex uk-flex-center uk-flex-middle" style="background-image: url(https://www.ekko-wp.com/wp-content/uploads/sites/3/2019/04/business4.jpg);" uk-parallax="bgy: -300; easing: 0">
             <div class="uk-grid">
-                <div class="uk-width-1-2@s">
+                <div class="uk-width-1-1 uk-text-center">
                     <div>
-                        <h3>Transform your ideas into a great product</h3>
-                        <p>Customize the framework to match your small business processes using simple drag-and-drop tools.</p>
+                        <h3>{{ .Site.Data.home.image_banner.heading }}</h3>
+                        <p>{{ .Site.Data.home.image_banner.body }}</p>
                     </div>
-                </div>
-                <div class="uk-width-1-2@s">
-                    test
                 </div>
             </div>
         </div>
