--- a/layouts/partials/home/second-home.html
+++ b/layouts/partials/home/second-home.html
@@ -1,22 +1,23 @@
+{{ $switcher := .Site.Data.home.text_and_image.switcher }}
 <div class="uk-section">
     <div class="uk-container">
         <div uk-grid>
             <div class="uk-width-1-2@s">
                 <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
+                    <h2>{{ .Site.Data.home.text_and_image.heading }}</h2>
+                    <p>{{ .Site.Data.home.text_and_image.body }}</p>
                     <ul class="uk-list uk-text-left" uk-switcher="connect: .right-switcher">
-                        <li><a href="#" class="uk-button uk-button-primary">The features your business needs</a></li>
-                        <li><a href="#" class="uk-button uk-button-primary">Boost your website traffic</a></li>
-                        <li><a href="#" class="uk-button uk-button-primary">Launch your project in style</a></li>
+                        {{ range $switcher }}
+                        <li><a href="#" class="uk-button uk-button-primary">{{ .heading }}</a></li>
+                        {{ end }}
                     </ul>
                 </div>
             </div>
             <div class="uk-width-expand">
                 <ul class="uk-switcher uk-margin right-switcher">
-                    <li><img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt=""></li>
-                    <li><img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign-tab1.jpg" alt=""></li>
-                    <li><img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign8.jpg" alt=""></li>
+                    {{ range $switcher }}
+                    <li><img src="{{ .image }}" alt="{{ .image_alt }}"></li>
+                    {{ end }}
                 </ul>
             </div>
         </div>
