--- a/layouts/partials/home/work.html
+++ b/layouts/partials/home/work.html
@@ -1,70 +1,38 @@
+{{ $work := .Site.Data.home.work }}
 <div class="uk-section">
     <div class="uk-container">
         <div class="uk-text-center">
-            <h2>Recent Work</h2>
-            <p>We design, build and support websites and apps for clients worldwide. We make your business stand out. Interested? Let's chat.</p>
+            <h2>{{ $work.heading }}</h2>
+            <p>{{ $work.body }}</p>
         </div>
 
-        <div uk-filter="target: .js-filter">
+        <div class="uk-margin-large-top" uk-filter="target: .js-filter">
 
-            <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center uk-margin-medium-top">
+            <ul class="uk-subnav uk-subnav-pill">
                 <li class="uk-active" uk-filter-control><a href="#">All</a></li>
-                <li uk-filter-control="[data-color='white']"><a href="#">White</a></li>
-                <li uk-filter-control="[data-color='blue']"><a href="#">Blue</a></li>
-                <li uk-filter-control="[data-color='black']"><a href="#">Black</a></li>
+                {{ $categories := slice }}
+                {{ range first 6 (where $.Site.RegularPages "Type" "portfolio") }}
+                  {{ $categories = $categories | append .Params.projects }}
+                {{ end }}
+                {{ range ($categories | uniq) }}
+                  <li uk-filter-control='[data-category="[{{ . }}]"]'>
+                    <a href="#">{{ . }}</a>
+                  </li>
+                {{ end }}
             </ul>
         
-            <ul class="js-filter uk-child-width-1-2 uk-child-width-1-3@m uk-text-center uk-margin-xlarge-top portfolio" uk-grid>
-                <li data-color="white">
-                    <div class="uk-card uk-card-default uk-card-body uk-cover-container" uk-lightbox>
-                        <a href="" class="lightbox" data-caption="">
-                            <canvas class="canvas" height="300"></canvas>
-                            <img src="https://www.ekko-wp.com/web-design/wp-content/uploads/sites/23/2017/12/webdesign2.jpg" alt="" uk-cover>
+            <ul class="js-filter uk-child-width-1-2 uk-child-width-1-3@m uk-text-center" uk-grid>
+                {{ range first 6 (where $.Site.RegularPages "Type" "portfolio") }}
+                <li data-category="{{ .Params.projects }}">
+                    <div class="uk-card uk-card-default uk-card-body uk-cover-container portfolio-page">
+                        <a href="{{ .Permalink }}" data-caption="">
+                            <canvas height="300"></canvas>
+                            <img src="{{ .Params.featured_image }}" alt="" uk-cover>
                         </a>
                     </div>
                 </li>
-                <li data-color="white">
-                    <div class="uk-card uk-card-default uk-card-body uk-cover-container" uk-lightbox>
-                        <a href="" class="lightbox" data-caption="">
-                            <canvas class="canvas" height="300"></canvas>
-                            <img src="https://www.ekko-wp.com/web-design/wp-content/uploads/sites/23/2017/12/webdesign5.jpg" alt="" uk-cover>
-                        </a>
-                    </div>
-                </li>
-                <li data-color="white">
-                    <div class="uk-card uk-card-default uk-card-body uk-cover-container" uk-lightbox>
-                        <a href="" class="lightbox" data-caption="">
-                            <canvas class="canvas" height="300"></canvas>
-                            <img src="https://www.ekko-wp.com/web-design/wp-content/uploads/sites/23/2017/12/webdesign11.jpg" alt="" uk-cover>
-                        </a>
-                    </div>
-                </li>
-                <li data-color="white">
-                    <div class="uk-card uk-card-default uk-card-body uk-cover-container" uk-lightbox>
-                        <a href="" class="lightbox" data-caption="">
-                            <canvas class="canvas" height="300"></canvas>
-                            <img src="https://www.ekko-wp.com/web-design/wp-content/uploads/sites/23/2017/12/webdesign4.jpg" alt="" uk-cover>
-                        </a>
-                    </div>
-                </li>
-                <li data-color="white">
-                    <div class="uk-card uk-card-default uk-card-body uk-cover-container" uk-lightbox>
-                        <a href="" class="lightbox" data-caption="">
-                            <canvas class="canvas" height="300"></canvas>
-                            <img src="https://www.ekko-wp.com/web-design/wp-content/uploads/sites/23/2017/12/webdesign6.jpg" alt="" uk-cover>
-                        </a>
-                    </div>
-                </li>
-                <li data-color="white">
-                    <div class="uk-card uk-card-default uk-card-body uk-cover-container" uk-lightbox>
-                        <a href="" class="lightbox" data-caption="">
-                            <canvas class="canvas" height="300"></canvas>
-                            <img src="https://www.ekko-wp.com/web-design/wp-content/uploads/sites/23/2017/12/webdesign7.jpg" alt="" uk-cover>
-                        </a>
-                    </div>
-                </li>
+                {{ end }}
             </ul>
-        
         </div>
     </div>
 </div>
