--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,10 @@
   
 {{ partial "global/head" . }}
-{{ partial "global/navbar" . }}
-<div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle page-banner" style="background: url(https://www.ekko-wp.com/wp-content/uploads/2019/04/services-classic.jpg)">
+
+<div class="uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle page-banner" style="background: url(https://www.ekko-wp.com/wp-content/uploads/2019/04/services-classic.jpg)">
+    <div class="uk-position-top full-nav-wrapper">
+        {{ partial "global/navbar" . }}
+    </div>
     <h1 class="uk-text-uppercase uk-white">{{ .Title }}</h1>
 </div>
 <main>
