--- a/layouts/contact/contact.html
+++ b/layouts/contact/contact.html
@@ -5,33 +5,11 @@
             <div>
                 <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top uk-margin-medium-left">
-                        <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/web-design1.png"  width="100" width="100">
+                        <img src="" alt="" width="100" width="100">
                     </div>
                     <div class="uk-card-body">
-                        <h3 class="uk-h4 uk-text-bold">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top uk-margin-medium-left">
-                        <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/web-design1.png"  width="100" width="100">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-h4 uk-text-bold">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top uk-margin-medium-left">
-                        <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/web-design1.png"  width="100" width="100">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-h4 uk-text-bold">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                        <h3 class="uk-h4 uk-text-bold"></h3>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -66,13 +44,8 @@
                     </div>
                     <div class="uk-width-1-3@s uk-flex uk-flex-middle">
                         <div class="uk-width-large">
-                            <h2>The features your business needs</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                            <ul class="uk-list">
-                                <li>The features your business needs</li>
-                                <li>Boost your website traffic</li>
-                                <li>Launch your project in style</li>
-                            </ul>
+                            <h2>{{ .Params.heading }}</h2>
+                            <p>{{ .Params.paragraph }}</p>
                         </div>
                     </div>
                 </div>
