--- a/layouts/contact/contact.html
+++ b/layouts/contact/contact.html
@@ -1,18 +1,22 @@
 {{ define "main" }}
 <div class="uk-section uk-section-small">
     <div class="uk-container">
-        <div class="uk-grid-column-medium uk-grid-row-large uk-child-width-1-3@s uk-text-left" uk-grid>
+        <div class="uk-grid-column-medium uk-grid-row-large uk-child-width-1-3@s uk-text-left" uk-grid uk-height-match="target: .uk-card">
+            {{ range .Params.blocks }}
             <div>
                 <div class="uk-card uk-card-default">
+                    {{ if .image }}
                     <div class="uk-card-media-top uk-margin-medium-left">
-                        <img src="" alt="" width="100" width="100">
+                        <img src="{{ .image }}" alt="" width="100" width="100">
                     </div>
+                    {{ end }}
                     <div class="uk-card-body">
-                        <h3 class="uk-h4 uk-text-bold"></h3>
-                        <p></p>
+                        <h3 class="uk-h4 uk-text-bold">{{ .heading }}</h3>
+                        <p>{{ .body }}</p>
                     </div>
                 </div>
             </div>
+            {{ end }}
         </div>
     </div>
 </div>
