--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -1,16 +1,18 @@
 {{ $hero := .Site.Data.home.hero }}
-<div class="uk-cover-container uk-flex uk-flex-center uk-flex-middle" uk-height-viewport style="background:url('{{ $hero.image }}') no-repeat center; background-size:cover" uk-grid>    
+<div class="uk-cover-container uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-bottom:25" style="background: #090909" uk-grid>    
     <div class="uk-position-top full-nav-wrapper" style="z-index: 1;">
         {{ partial "global/navbar" . }}
     </div>
-    <div class="hero-text uk-dark uk-width-3-5@s uk-margin-large" style="margin-left:20px;">
-        {{ if $hero.heading }}
-        <h1 class="uk-text-bold heading uk-margin-remove">{{ $hero.heading }}</h1>
-        {{ end }}
-        {{ if $hero.heading }}
-        <p class="uk-text-normal">{{ $hero.body }}</p>
-        {{ end }}
-        <a href="/contact" class="uk-button-primary uk-button">Free Estimate</a>
+    <div class="hero-text uk-white uk-width-3-5@s uk-text-center uk-flex uk-flex-center" style="margin-left:20px;margin-right: 20px;">
+        <div class="uk-width-2xlarge@s">
+            {{ if $hero.heading }}
+            <h1 class="uk-text-bold heading uk-margin-remove uk-white">{{ $hero.heading }}</h1>
+            {{ end }}
+            {{ if $hero.heading }}
+            <p class="uk-text-normal uk-text-default">{{ $hero.body }}</p>
+            {{ end }}
+            <a href="/contact" class="uk-button-primary uk-button">Free Estimate</a>
+        </div>
     </div>
     
 </div>
