--- a/layouts/partials/home/second-home.html
+++ b/layouts/partials/home/second-home.html
@@ -1,24 +1,26 @@
 {{ $switcher := .Site.Data.home.text_and_image.switcher }}
 <div class="uk-section">
-    <div class="uk-container">
+    <div class="uk-container" uk-height-match="target: .uk-card">
         <div uk-grid>
-            <div class="uk-width-1-2@s">
-                <div class="uk-width-large">
+            <div class="uk-width-1-2@s uk-card uk-flex uk-flex-middle">
+                <div class="uk-width-large switcher">
                     <h2>{{ .Site.Data.home.text_and_image.heading }}</h2>
                     <p>{{ .Site.Data.home.text_and_image.body }}</p>
                     <ul class="uk-list uk-text-left" uk-switcher="connect: .right-switcher">
                         {{ range $switcher }}
-                        <li><a href="#" class="uk-button uk-button-primary">{{ .heading }}</a></li>
+                        <li><a href=""><span uk-icon="icon: check" class="uk-margin-small-right"></span>{{ .heading }}</a></li>
                         {{ end }}
                     </ul>
                 </div>
             </div>
             <div class="uk-width-expand">
-                <ul class="uk-switcher uk-margin right-switcher">
-                    {{ range $switcher }}
-                    <li><img src="{{ .image }}" alt="{{ .image_alt }}"></li>
-                    {{ end }}
-                </ul>
+                <div class="uk-card switcher-image">
+                    <ul class="uk-switcher uk-margin right-switcher">
+                        {{ range $switcher }}
+                        <li><img src="{{ .image }}" alt="{{ .image_alt }}"></li>
+                        {{ end }}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
