--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -1,11 +1,11 @@
 <div class="uk-section" id="icons-section">
     <div class="uk-container">
-        <div class="uk-child-width-1-4@m uk-text-center" uk-grid>
+        <div class="uk-child-width-1-4@m uk-text-center uk-grid-small" uk-grid uk-height-match="target: .uk-card">
             {{ range .Site.Data.home.featured_blocks }}
             <div>
                 <div class="uk-card">
                     <div class="uk-card-media-top">
-                        <img src="{{ .image }}" alt="{{ .image_alt }}"  width="100" width="100">
+                        <img src="{{ .image }}" alt="{{ .image_alt }}" style="object-fit: contain;" width="100" height="100">
                     </div>
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">{{ .heading }}</h3>
