--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -243,7 +243,7 @@ a.link-black {
 /* FOOTER */
 
 footer.footer {
-    background: #1a1a1a;
+    background: #090909;
 }
 
 footer.footer ul.uk-list li,
