--- a/layouts/partials/home/second-home.html
+++ b/layouts/partials/home/second-home.html
@@ -6,11 +6,13 @@
                 <div class="uk-width-large switcher">
                     <h2>{{ .Site.Data.home.text_and_image.heading }}</h2>
                     <div class="uk-margin-medium">
-                        {{ range $switcher }}
-                        <p>{{ .body }}</p>
-                        {{ end }}                    
+                        <ul class="uk-switcher uk-margin right-switcher">
+                            {{ range $switcher }}
+                            <li>{{ .body }}</li>
+                            {{ end }}
+                        </ul>          
                     </div>
-                    <ul class="uk-list uk-text-left" uk-switcher="connect: .right-switcher">
+                    <ul class="uk-list uk-text-left text-switch" uk-switcher="connect: .right-switcher">
                         {{ range $switcher }}
                         <li><a href=""><span uk-icon="icon: check" class="uk-margin-small-right"></span>{{ .heading }}</a></li>
                         {{ end }}
@@ -21,7 +23,7 @@
                 <div class="uk-card switcher-video">
                     <ul class="uk-switcher uk-margin right-switcher">
                         {{ range $switcher }}
-                        <video src="https://res.cloudinary.com/hungryram19/video/upload/v1628028679/hungryram/yagerre-home_d3ihg1.mp4" loop muted playsinline uk-video="autoplay: inview"></video>
+                        <video src="{{ .video_link }}" loop muted playsinline uk-video="autoplay: inview"></video>
                         {{ end }}
                     </ul>
                 </div>
