--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -11,7 +11,7 @@
             {{ if $hero.heading }}
             <p class="uk-text-normal uk-text-default">{{ $hero.body }}</p>
             {{ end }}
-            <a href="/contact" class="uk-button-primary uk-button">Free Estimate</a>
+            <a href="#modal-signup" class="uk-button-primary uk-button" uk-toggle>Free Estimate</a>
         </div>
     </div>
     
