--- a/layouts/partials/home/slogan.html
+++ b/layouts/partials/home/slogan.html
@@ -8,9 +8,10 @@
                 <p>{{ .Site.Data.home.closing.body }}</p>
                 {{ end }}
                 <div class="uk-margin-medium-top">
-                    <a href="" class="uk-button uk-button-primary">Get a quote</a>
+                    <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get a quote</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+{{ partial "templates/modal" . }}
