--- a/layouts/partials/home/work.html
+++ b/layouts/partials/home/work.html
@@ -9,7 +9,8 @@
         <div class="uk-margin-large-top" uk-filter="target: .js-filter">
 
             <ul class="uk-subnav uk-subnav-pill">
-                <li class="uk-active" uk-filter-control><a href="#">All</a></li>
+                <li><a href="/portfolio">All projects</a></li>
+                <li class="uk-active" uk-filter-control><a href="#">All Recent</a></li>
                 {{ $categories := slice }}
                 {{ range first 6 (where $.Site.RegularPages "Type" "portfolio") }}
                   {{ $categories = $categories | append .Params.projects }}
