--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -4,16 +4,18 @@
         <div uk-grid>
             <div class="uk-width-1-3@s">
                 <div class="uk-card">
-                    <h2>We create brand new corporate identities</h2>
+                    <h2>How your website is built matters a lot</h2>
                 </div>
             </div>
             <div class="uk-width-1-3@s">
                 <div class="uk-card">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam harum expedita nulla impedit quidem nemo facilis nam, culpa provident ea molestias minima ut atque velit sit iure distinctio quibusdam sunt.</div>
+                    <p>With a decade of experience in web development, your website is built using JAMstack - a new architecture for developing super fast, scalable, and secured websites.</p>
+                    <p>While everyone is on Wordpress, upgrade your site to the newest web technology</p>
+                </div>
             </div>
             <div class="uk-width-1-3@s">
                 <div class="uk-card">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores pariatur voluptatem ad ex possimus, laborum animi quibusdam magnam alias ducimus, exercitationem labore deserunt eius molestiae esse, voluptas cupiditate. Ipsam, aperiam!
+                    <p>Hungry Ram provides professional built websites from the ground up. Why Hungry Ram? It all started with a need to buy domain names and hungryram.com was available. Ram Dettmer, founder of Hungry Ram used the name as an alias while freelancing.</p>
                 </div>
             </div>
         </div>
