--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,5 +4,6 @@
 {{ partial "home/second-home" . }}
 {{ partial "home/image-banner" . }}
 {{ partial "home/work" . }}
-{{ partial "home/slogan" . }}
+{{ partial "home/closing" . }}
+{{ partial "templates/modal" . }}
 {{ partial "global/footer" . }}
