--- a/layouts/services/services.html
+++ b/layouts/services/services.html
@@ -1,71 +1,91 @@
 {{ define "main" }}
-<div class="uk-section uk-section-small" style="border-bottom:1px solid rgba(132,132,132,.15)">
-    <div class="uk-container">
-        <div class="uk-grid-column-small uk-grid-row-large uk-child-width-1-4@s uk-text-center" uk-grid>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="uk-section uk-section-large">
     <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
-                    </ul>
+        <div class="uk-grid-large uk-flex uk-flex-middle" uk-grid>
+            <div class="uk-width-1-3@s">
+                <div>
+                    <h2>The only place where you can get a website built using modern technology</h2>
+                    <p>All websites are coded by a professional developer with a decade of experience.</p>
+                    <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Talk with the developer</a>
+                    {{ partial "templates/modal" . }}
                 </div>
             </div>
             <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
+                <div class="uk-grid-column-small uk-grid-row-small uk-child-width-1-2@s" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">
+                            <div>
+                                <h3 class="uk-h5 accent">Website Design</h3>
+                                <p class="uk-text-default">Attract and engage visitors with captivating designs</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">
+                            <div>
+                                <h3 class="uk-h5 accent">Website Development</h3>
+                                <p>Utilizing JAMstack architecture for the most secure and fast websites</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">
+                            <div>
+                                <h3 class="uk-h5 accent">Web Hosting</h3>
+                                <p>Ensuring your sites security and speed by hosting on a trusted CDN</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">
+                            <div>
+                                <h3 class="uk-h5 accent">Ongoing Support</h3>
+                                <p>Spend less time dealing with updating your website. Contact support for help anytime!</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- OTHER SECTION -->
-<div class="uk-section uk-section-large">
+<div class="uk-section" style="background: #F5F5F5">
     <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
-            <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
+        <div class="uk-flex uk-flex-center">
+            <div class="uk-width-xlarge">
+                <div class="uk-text-center">
+                    <h5>What goes into creating a great website?</h5>
+                    <h2>Consistent process leads to quality results and growth</h2>
                 </div>
             </div>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
-                    </ul>
+        </div>
+        <div class="uk-child-width-expand@s uk-text-center uk-margin-medium-top our-process-container" uk-grid>
+            <div>
+                <div class="uk-card">
+                    <div class="process-step">
+                        <span>1</span>
+                    </div>
+                    <h4 class="uk-h6">Discover and Strategize</h4>
+                    <p>Research and planning is important to find the best way to design your website based off of your market.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card">
+                    <div class="process-step">
+                        <span>2</span>
+                    </div>
+                    <h4 class="uk-h6">Design and Development</h4>
+                    <p>Designs are put together on a preview stage where you can track the site progress.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card">
+                    <div class="process-step">
+                        <span>3</span>
+                    </div>
+                    <h4 class="uk-h6">Launch and Nurture</h4>
+                    <p>Your site will be tested for performance and SEO to ensure quality and accuracy.</p>
                 </div>
             </div>
         </div>
@@ -111,19 +131,6 @@
     </div>
 </div>
 
-<!-- CLOSING -->
-<div class="uk-section">
-    <div class="uk-container">
-        <div class="uk-width-1-1 uk-flex uk-flex-center">
-            <div class="uk-width-large uk-text-center">
-                <h6 class="uk-margin-remove">Match the feel of your business</h6>
-                <h2 class="uk-margin-remove uk-text-bold">Consult our experts about your project for free</h2>
-                <div class="uk-margin-medium-top">
-                    <a href="" class="uk-button uk-button-primary">Get a quote</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{{ partial "home/closing" . }}
 
 {{ end }}
