--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -271,6 +271,25 @@ a.link-black {
     text-decoration: underline;
 }
 
+/* SERVICES */
+
+div.process-step span {
+    background: #2196f3;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    color: #ffffff;
+    display: inline-block;
+    font-weight: bold;
+    padding: 20px;
+    line-height: 1.6em;
+    margin-right: 5px;
+    text-align: center;
+    width: 1.6em;
+    z-index: 1;
+    position: relative;
+}
+
 /* FOOTER */
 
 footer.footer {
